<resources>
    <string name="app_name">TPN1</string>
    <string name="integrantes">• Cicarelli, Emiliano\n• Islas, Matias\n• Rodriguez, Nicolas\n• Torres, Diego</string>
    <string name="ejercicio_1">Ejercicio 1</string>
    <string name="ejercicio_2">Ejercicio 2</string>
    <string name="ingresar_nro">Ingresar número</string>
    <string name="segundo_nro">Segundo Número:</string>
    <string name="primer_nro">Primer Número:</string>
    <string name="calculadora">Calculadora</string>
    <string name="Suma">Suma</string>
</resources>