<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ejercicio1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="213dp"
        android:layout_height="142dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="252dp"
        android:paddingHorizontal="2dp"
        android:paddingVertical="2dp"
        android:text="@string/integrantes"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ej2" />

    <Button
        android:id="@+id/btn_ej1"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="#D6D7D7"
        android:onClick="Ejercicio1"
        android:text="@string/ejercicio_1"
        android:textColor="#333333"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ej2"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:backgroundTint="#D6D7D7"
        android:onClick="Ejercicio2"
        android:text="@string/ejercicio_2"
        android:textColor="#333333"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ej1"
        app:layout_constraintVertical_bias="0.109" />

</androidx.constraintlayout.widget.ConstraintLayout>