<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ejercicio1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio1">

    <EditText
        android:id="@+id/txt_n1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/ingresar_nro"
        android:inputType="number|numberDecimal|numberSigned"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/tv_primer_numero"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_primer_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/primer_nro"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_segundo_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/segundo_nro"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_primer_numero" />

    <EditText
        android:id="@+id/txt_n2"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/ingresar_nro"
        android:inputType="number|numberDecimal|numberSigned"
        app:layout_constraintStart_toEndOf="@+id/tv_segundo_numero"
        app:layout_constraintTop_toBottomOf="@+id/txt_n1" />

    <Button
        android:id="@+id/btn_sumar"
        android:layout_width="211dp"
        android:layout_height="49dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="84dp"
        android:onClick="realizarSuma"
        android:text="Calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_segundo_numero" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="187dp"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sumar" />
</androidx.constraintlayout.widget.ConstraintLayout>